Use ComicCode patched, add wlogout

--- a/private_dot_config/waybar/style.css
+++ b/private_dot_config/waybar/style.css
@@ -7,7 +7,7 @@ window#waybar {
 }
 
 * {
-    font-family: "Comic Code", "Font Awesome 6 Free", "Font Awesome 6 Brands";
+    font-family: "ComicCode Nerd Font";
     font-size: 10pt;
 }
 
